# vangard-script-utils

./: .gitignore  ADDITIONAL_TESTS_SUMMARY.md  ARGS.md  BUGFIX_SUMMARY.md  CLAUDE.md  INSTALLATION.md  INTERACTIVE_AUTOCOMPLETE.md  INTERACTIVE_AUTOCOMPLETE_TEST.md  INTERACTIVE_MODE_SUMMARY.md  MANIFEST.in  NEW_TEST_FILES.md  PACKAGE_SETUP_SUMMARY.md  PARAMETER_FIX_SUMMARY.md  PRO_IMPLEMENTATION_SUMMARY.md  PRO_MODE.md  PRO_VISUAL_REFERENCE.md  QUICK_TEST_GUIDE.md  README.md  REFACTORING_COMPLETE.md  SCENE_AUTOCOMPLETE_IMPLEMENTATION.md  SCENE_AUTOCOMPLETE_QUICKSTART.md  TESTING_STRATEGY.md  TEST_SUMMARY.md  UICLASS_GUIDE.md  UI_HINTS_IMPLEMENTATION.md  UI_HINTS_TEST_CHECKLIST.md  config.yaml  config_reference.html  config_reference.md  generate_docs.py  gui.py  main.py  pyproject.toml  pytest.ini  requirements.txt  server.py  setup.py
.github/workflows/: tests.yml
core/: framework.py
tests/: README.md  __init__.py  conftest.py
tests/commands/: test_apply_generic_pose_su.py  test_batch_render_su.py  test_character_rotate_and_render_su.py  test_copy_current_scene_file_su.py  test_copy_named_camera_to_current_camera_su.py  test_copy_transform_object_su.py  test_create_basic_camera_su.py  test_create_group_node_su.py  test_drop_object_su.py  test_exec_generic_action_su.py  test_face_render_lora_su.py  test_help_command.py  test_list_products_metadata_su.py  test_list_scene_products_su.py  test_load_merge_su.py  test_save_scene_subset_su.py  test_save_selected_content_su.py  test_save_viewport_su.py  test_scene_roller_su.py  test_single_scene_renderer_su.py
tests/integration/: test_config_consistency.py
tests/unit/: test_base_command.py  test_framework.py
vangard/: __init__.py  cli.py  gui.py  interactive.py  interactive_completer.py  main.py  pro.py  scene_cache.py  server.py
vangard/commands/: ApplyGenericPoseSU.py  BaseCommand.py  BatchRenderSU.py  CharacterRotateAndRenderSU.py  CopyCurerentSceneFileSU.py  CopyNamedCameraToCurrentCameraSU.py  CopyTransformObjectSU.py  CreateBasicCameraSU.py  CreateGroupNodeSU.py  DropObjectSU.py  ExecGenericActionSU.py  FaceRenderLoraSU.py  FreezeSimulationUnselectedSU.py  (+14 more)
(+39 files in other folders)
